--- a/wwwroot/IdTemplateFront.html
+++ b/wwwroot/IdTemplateFront.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -15,14 +15,14 @@
                         <img src="[PATH]\images\FCSD_Hawk.png">
                     </div>
                     <div class="middle">
-                        <img src="Thomas Lemieux.jpg">
+                        <img src="[IDPHOTO]">
                     </div>
                     <div class="bottom">
                         <p>
-                            Thomas Lemieux
+                            [NAME]
                         </p>
                         <div class="barcode">
-                                <img src="barcode.PNG">
+                                <img src="[BARCODE]">
                         </div>    
                            
                     </div>
