--- a/wwwroot/IdTemplateBack.html
+++ b/wwwroot/IdTemplateBack.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -12,7 +12,7 @@
                 <div class="back">
                     <h1 class="Details">Classlink Qr Code</h1>
                     <div class="back-middle">
-                        <img src="qr sample.png">
+                        <img src="[QRCODE]">
                     </div>
                     <div class="bottom">
                         
