--- a/wwwroot/IdTemplateBack.html
+++ b/wwwroot/IdTemplateBack.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="IdTemplateStyleSheet.css">
-        <title>ID Card Front</title>
+        <link rel="stylesheet" href="[PATH]\css\IdTemplateStyleSheet.css">
+        <title>ID Card Back</title>
     </head>
     <body>
         <div class="container">
