PDF Functionality Updates

--- a/wwwroot/IdTemplateBack.html
+++ b/wwwroot/IdTemplateBack.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="[PATH]\css\IdTemplateStyleSheet.css">
-        <title>ID Card Back</title>
     </head>
     <body>
         <div class="container">
@@ -12,7 +11,7 @@
                 <div class="back">
                     <h1 class="Details">Classlink Qr Code</h1>
                     <div class="back-middle">
-                        <img src="[QRCODE]">
+                        <img src="data:image/png;base64, [QRCODE]">
                     </div>
                     <div class="bottom">
                         
