--- a/wwwroot/IdTemplateFront.html
+++ b/wwwroot/IdTemplateFront.html
@@ -1,10 +1,9 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="[PATH]\css\IdTemplateStyleSheet.css">
-        <title>ID Card Front</title>
     </head>
     <body>
         <div class="container">
@@ -12,17 +11,17 @@
                 <div class="front">
                     <div class="top">
                         <p>[SCHOOL]</p>
-                        <img src="[PATH]\images\FCSD_Hawk.png">
+                        <img src="data:image/png;base64, [LOGO]">
                     </div>
                     <div class="middle">
-                        <img src="[IDPHOTO]">
+                        <img src="data:image/png;base64, [IDPHOTO]">
                     </div>
                     <div class="bottom">
                         <p>
                             [NAME]
                         </p>
                         <div class="barcode">
-                                <img src="[BARCODE]">
+                                <img src="data:image/png;base64, [BARCODE]">
                         </div>    
                            
                     </div>
