--- a/wwwroot/IdTemplateFront.html
+++ b/wwwroot/IdTemplateFront.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="[PATH]\css\IdTemplateStyleSheet.css">
     </head>
@@ -20,10 +20,9 @@
                         <p>
                             [NAME]
                         </p>
-                        <div class="barcode">
+                        <div >
                                 <img src="data:image/png;base64, [BARCODE]">
-                        </div>    
-                           
+                        </div>       
                     </div>
                 </div>
             </div>
