Template Updates and Student Model Update

--- a/wwwroot/IdTemplateFront.html
+++ b/wwwroot/IdTemplateFront.html
@@ -20,7 +20,10 @@
                         <p>
                             [NAME]
                         </p>
-                        <div >
+                        <p>
+                            Grade: [GRADE]
+                        </p>
+                        <div class="barcode">
                                 <img src="data:image/png;base64, [BARCODE]">
                         </div>       
                     </div>
