--- a/wwwroot/IdTemplateFront.html
+++ b/wwwroot/IdTemplateFront.html
@@ -30,7 +30,7 @@
                     <div class="id-number">
                         <div class="no">
                             <p>
-                                1920001499
+                                [IDNUMBER]
                             </p>
                         </div>
                     </div>
