--- a/wwwroot/QrCodeTemplate.html
+++ b/wwwroot/QrCodeTemplate.html
@@ -13,12 +13,10 @@
                     <div class="back-middle">
                         <img src="data:image/png;base64, [QRCODE]">
                     </div>
-                    <div class="bottom-back">
-                        
-                        <p>Suicide Prevention Hotline:</p>
-                        <p>800-273-8255</p>
-                        <p>Crisis Text Line:</p>
-                        <p>Text HOME To 741741</p>
+                    <div class="bottom-back">               
+                        <p>[NAME]</p>
+                        <p>[IDNUMBER]</p>
+                        <p>[GRADE]</p>
                     </div>
                 </div>
             </div>
