Qr Code Generation and Id Generation Updates
Generating IDs by single, grade level, and homeroom is now working. Though due to how blank pages are introduced when creating large pdfs all are individually done and added to folders. Begun working on implementing generating sheets of just qr codes for teachers.

--- a/wwwroot/QrCodeTemplate.html
+++ b/wwwroot/QrCodeTemplate.html
@@ -1,25 +1,12 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="[PATH]\css\[STYLESHEET]">
-    </head>
-    <body>
-        <div class="container">
-            <div class="padding">
-                <div class="back">
-                    <h1 class="Details">Classlink Qr Code</h1>
-                    <div class="back-middle">
-                        <img src="data:image/png;base64, [QRCODE]">
-                    </div>
-                    <div class="bottom-back">               
-                        <p>[NAME]</p>
-                        <p>[IDNUMBER]</p>
-                        <p>[GRADE]</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" media="all" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" media="all" href="ElementaryStyleSheet.css">
+</head>
+<body>
+    [BODY]
+</body>
 </html>
