Qr Template Fix Working
QR Templates for homerooms is now working correctly.

--- a/wwwroot/IdTemplateBack.html
+++ b/wwwroot/IdTemplateBack.html
@@ -14,7 +14,7 @@
                         <img src="data:image/png;base64, [QRCODE]">
                     </div>
                     <div class="bottom-back">      
-                        <p>Suicide Prevention Hotline:</p>
+                        <p>Crisis Hotline:</p>
                         <p>800-273-8255</p>
                         <p>Crisis Text Line:</p>
                         <p>Text HOME To 741741</p>
